--- a/ui/src/app/cards/card/card.component.html
+++ b/ui/src/app/cards/card/card.component.html
@@ -1,21 +1,29 @@
 <h2>
-    {{isAdd?"添加门禁卡":"修改已有门禁卡：" + card.cardNo}}</h2>
-  <form name="workerForm">
-    <div class="form-group row">
-      <label for="cardNo" class="col-lg-2 col-form-label">卡号</label>
-      <div class="col-lg-10">
-        <input type="text" class="form-control" id="cardNo" name="cardNo" placeholder="输入卡号" [(ngModel)]="card.cardNo">
-      </div>
+  {{isAdd?"添加门禁卡":"修改已有门禁卡：" + card.cardNo}}</h2>
+<form name="workerForm">
+  <div class="form-group row">
+    <label for="cardNo" class="col-lg-2 col-form-label">卡号</label>
+    <div class="col-lg-10">
+      <input type="text" class="form-control" id="cardNo" name="cardNo" placeholder="输入卡号" [(ngModel)]="card.cardNo">
     </div>
-    <div class="form-group row">
-      <label for="worker" class="col-lg-2 col-form-label">员工编号</label>
-      <div class="col-lg-10">
-        <input type="text" class="form-control" id="worker" name="worker" placeholder="输入员工编号" [(ngModel)]="card.worker.id">
-      </div>
+  </div>
+  <div class="form-group row">
+    <label for="worker" class="col-lg-2 col-form-label">员工编号</label>
+    <div class="col-lg-10">
+      <input type="text" class="form-control" id="worker" name="worker" placeholder="输入员工编号" [(ngModel)]="card.worker.id">
     </div>
-    <div class="container-fluid">
-        <button type="button" class=" btn btn-primary btn-lg submit-btn" (click)="onSubmit()">提交</button>
-        <button type="button" class=" btn btn-primary btn-lg submit-btn" routerLink="../">取消</button>
+  </div>
+  <div class="form-group row">
+    <label for="worker" class="col-lg-2 col-form-label">是否上传到门禁</label>
+    <div class="col-lg-10">
+      <label class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input " id="isUpload" name="isUpload" [(ngModel)]="isUpload">
+        <span class="custom-control-indicator"></span>
+      </label>
     </div>
-  </form>
-
+  </div>
+  <div class="container-fluid">
+    <button type="button" class=" btn btn-primary btn-lg submit-btn" (click)="onSubmit()">提交</button>
+    <button type="button" class=" btn btn-primary btn-lg submit-btn" routerLink="../">取消</button>
+  </div>
+</form>
