--- a/ui/src/app/cards/card/card.component.html
+++ b/ui/src/app/cards/card/card.component.html
@@ -8,16 +8,16 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="worker" class="col-lg-2 col-form-label">员工编号</label>
+    <label for="workerName" class="col-lg-2 col-form-label">员工</label>
     <div class="col-lg-10">
-      <input type="text" class="form-control" id="worker" name="worker" placeholder="输入员工编号" [(ngModel)]="card.worker.id">
+      <app-worker-input [(selected)]="card.worker"></app-worker-input>
     </div>
   </div>
   <div class="form-group row">
     <label for="worker" class="col-lg-2 col-form-label">是否上传到门禁</label>
     <div class="col-lg-10">
       <label class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input " id="isUpload" name="isUpload" [(ngModel)]="isUpload">
+        <input type="checkbox" class="custom-control-input" id="isUpload" name="isUpload" [(ngModel)]="isUpload">
         <span class="custom-control-indicator"></span>
       </label>
     </div>
