--- a/ui/src/app/incidents/incident/incident.component.html
+++ b/ui/src/app/incidents/incident/incident.component.html
@@ -52,9 +52,9 @@
     </div>
   </div>
   <div class="form-group row">
-    <label for="subject" class="col-lg-2 col-form-label">民工编号</label>
+    <label for="subject" class="col-lg-2 col-form-label">涉及民工</label>
     <div class="col-lg-10">
-      <input type="text" class="form-control" id="subject" name="subject" placeholder="输入民工编号" [(ngModel)]="incident.subject.id">
+        <app-worker-input [(selected)]="incident.subject"></app-worker-input>
     </div>
   </div>
   <div class="form-group row">
