1. implement search for worker/user 2. change tree to use ng2-tree 3. implement 401 redirect in interceptor

--- a/ui/src/app/cards/door-tree/door-tree.component.html
+++ b/ui/src/app/cards/door-tree/door-tree.component.html
@@ -1,3 +1,4 @@
 <div class="tree">
-    <tree-root [nodes]="root" [options]="options" (activate)="onActivate($event)"></tree-root>
+    <!-- <tree-root [nodes]="root" [options]="options" (activate)="onActivate($event)"></tree-root> -->
+    <tree [tree]="root" (nodeSelected)="onActivate($event)" (nodeExpanded)="handleExpanded($event)" #treeComponent></tree>
     </div>
