--- a/ui/src/app/scores/scores/scores.component.html
+++ b/ui/src/app/scores/scores/scores.component.html
@@ -1,5 +1,5 @@
 <div class="input-group ">
-    <input type="text" class="form-control" placeholder="查找...">
+    <input type="text" class="form-control" placeholder="查找姓名..." (keyup) = "performSearch($event)">
   </div>
   <table class="table table-bordered table-hover">
     <thead>
