--- a/ui/src/app/doors/door/door.component.html
+++ b/ui/src/app/doors/door/door.component.html
@@ -1,6 +1,12 @@
 <h2>
     {{isAdd?"添加新门禁":"修改已有门禁：" + door.sn}}</h2>
   <form name="workerForm">
+      <div class="form-group row">
+          <label for="label" class="col-lg-2 col-form-label">别名</label>
+          <div class="col-lg-10">
+            <input type="text" class="form-control" id="label" name="label" placeholder="输入别名" [(ngModel)]="door.label">
+          </div>
+        </div>
     <div class="form-group row">
       <label for="protocol" class="col-lg-2 col-form-label">通信协议</label>
       <div class="col-lg-10">
