--- a/ui/src/app/doors/doors/doors.component.html
+++ b/ui/src/app/doors/doors/doors.component.html
@@ -11,7 +11,7 @@
   <thead>
     <tr>
       <th scope="col"></th>
-      <th scope="col">编号</th>
+      <th scope="col">别名</th>
       <th scope="col">协议类型</th>
       <th scope="col">序列号</th>
       <th scope="col">IP地址</th>
@@ -24,7 +24,7 @@
         <input type="checkbox" (change)="handleSelectEvent($event,door)" />
       </th>
       <td>
-        <a href="#" routerLink="/doors/{{door.id}}">{{door.id}}</a>
+        <a href="#" routerLink="/doors/{{door.id}}">{{(door.label == null )?door.sn:door.label}}</a>
       </td>
       <td>{{door.protocol}}</td>
       <td>{{door.sn}}</td>
