add domain tree to workers pane

--- a/ui/src/app/share/domain-tree/domain-tree.component.html
+++ b/ui/src/app/share/domain-tree/domain-tree.component.html
@@ -12,6 +12,7 @@
 [filterMode]="'simple'"
 [filterable]="true"
 [filterHeight]="35"
+[localization]="localizeObj"
 [renderToolbar]="renderToolbar"
 [source]="dataAdapter"
 [ready]="ready"
