add domain tree to door pane

--- a/ui/src/app/doors/doors/doors.component.html
+++ b/ui/src/app/doors/doors/doors.component.html
@@ -1,5 +1,5 @@
 <div class="input-group ">
-  <button class="btn btn-primary" type="button" routerLink="/doors/new">添加</button>
+  <button class="btn btn-primary" type="button" routerLink="./new">添加</button>
   <button class="btn btn-primary" type="button" (click)="performDelete()">删除</button>
   <button class="btn btn-primary" type="button" (click)="performTest()">测试连接</button>
   <button class="btn btn-primary" type="button" (click)="checkCardAreaStatus()">查看卡区域状态</button>
