add domain tree to cards pane

--- a/ui/src/app/cards/cards-layout/cards-layout.component.html
+++ b/ui/src/app/cards/cards-layout/cards-layout.component.html
@@ -1,9 +1,11 @@
-<div class='row cardMain'>
+<div class='row treeOuter'>
   <div class="col-sm-3 col-md-3 col-lg-3 treePanel">
-    <!-- <app-door-tree (onSelected)="onDoorSelected($event)"></app-door-tree> -->
-    <app-door-tree-2 (onSelected)="onDoorSelected($event)"></app-door-tree-2>
+      <app-domain-tree [(selected)]="selectedDomain"></app-domain-tree>
   </div>
-  <div class="col-sm-9 col-md-9 col-lg-9 cardsPanel">
-    <app-card-right-layout [door]="selectedDoor"></app-card-right-layout>
+  <div class="col-sm-3 col-md-3 col-lg-3 doorTreePane">
+    <app-door-tree-2 [domainId]="selectedDomain" [(selected)]="selectedDoor" (selectedChange)="onSelectedDoorChange($event)"></app-door-tree-2>
+  </div>
+  <div class="col-sm-6 col-md-6 col-lg-6 cardsPanel">
+    <app-card-right-layout [domainId]="selectedDomain" [door]="selectedDoor"></app-card-right-layout>
   </div>
 </div>
