--- a/ui/src/app/cards/cards-layout/cards-layout.component.scss
+++ b/ui/src/app/cards/cards-layout/cards-layout.component.scss
@@ -1,13 +1,4 @@
-.cardMain {
-    height: 100%;
-    padding-right: 30px;
-}
-.treePanel {
-    height: 100%;
-    padding-top: 20px;
-    border-right: 4px double #eee;
-}
-.cardsPanel {
+.cardsPanel .doorTreePane {
     height: 100%;
     padding-top: 20px;
 }
