--- a/ui/src/app/cards/card/card.component.html
+++ b/ui/src/app/cards/card/card.component.html
@@ -10,7 +10,7 @@
   <div class="form-group row">
     <label for="workerName" class="col-lg-2 col-form-label">员工</label>
     <div class="col-lg-10">
-      <app-worker-input [(selected)]="card.worker"></app-worker-input>
+      <app-worker-input [domainId]="domainId" [(selected)]="card.worker"></app-worker-input>
     </div>
   </div>
   <div class="form-group row">
