--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -69,11 +69,12 @@ For Jqx-widget tree
   font-size: 16px;
 }
 .jqx-cell {
+  font-size: 16px;
   border:none;
   cursor: pointer;
 }
 .treeOuter {
-  height: 100%;
+  height: 99%;
   padding-right: 30px;
 }
 .treePanel {
