1. add passTraining API 2. 民工->劳工 3. search for card and incident Page 4. forbid normal user to delete worker and incident.

--- a/ui/src/app/cards/cards/cards.component.html
+++ b/ui/src/app/cards/cards/cards.component.html
@@ -4,7 +4,7 @@
     <button class="btn btn-primary" type="button" (click)="performDelete()">删除</button>
   </div>
   <div class="col-sm-6 col-md-6 col-lg-6">
-      <input type="text" class="form-control" placeholder="查找...">
+      <input type="text" class="form-control" placeholder="查找姓名..." (keyup) = "performSearch($event)">
   </div>
 </div>
 <table class="table table-bordered table-hover">
