--- a/ui/src/app/workers/worker/worker.component.html
+++ b/ui/src/app/workers/worker/worker.component.html
@@ -1,5 +1,5 @@
 <h2>
-  {{isAdd?"新建民工档案":"修改民工档案：" + worker.name}}</h2>
+  {{isAdd?"新建劳工档案":"修改劳工档案：" + worker.name}}</h2>
 <form name="workerForm">
   <div class="form-group row">
     <label for="name" class="col-lg-2 col-form-label">姓名</label>
