--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -3,31 +3,31 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
         <a class="navbar-brand" href="index.html">
-            <img src="/assets/img/logo.png" width="77" height="34" alt="">成都地铁民工信息管理系统</a>
+            <img src="/assets/img/logo.png" width="77" height="34" alt="">成都地铁施工安全管理系统</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav navbar-sidenav" id="sideNavBars">
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="民工档案管理">
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="劳工档案管理">
                     <a class="nav-link" routerLink="/workers">
                         <i class="fa fas fa-archive"></i>
-                        <span class="nav-link-text">民工档案管理</span>
+                        <span class="nav-link-text">劳工档案管理</span>
                     </a>
                 </li>
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="民工积分管理">
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="劳工积分管理">
                     <a class="nav-link nav-link-collapse" (click)="scoreIsCollapsed = toggleSubMenu(scoreIsCollapsed);" [ngClass]="scoreIsCollapsed?'collapsed':''"
                         [attr.aria-expanded]="!scoreIsCollapsed" aria-controls="scoreSub" data-parent="#sideNavBars">
                         <i class="fa fas fa-star"></i>
-                        <span class="nav-link-text">民工积分管理</span>
+                        <span class="nav-link-text">劳工积分管理</span>
                     </a>
                     <ul class="sidenav-second-level" id="scoreSub" [ngbCollapse]="scoreIsCollapsed||allIsCollapsed">
                         <li>
                             <a routerLink="/incidents">
                                 <i class="fa fas fa-calendar"></i> 红黑事件录入</a>
                         </li>
-                        <li *ngIf="(loginRole === 'ADMIN')">
+                        <li *ngIf="isAdmin">
                             <a routerLink="/scores">
                                 <i class="fa fas fa-star"></i> 积分查询</a>
                         </li>
@@ -50,7 +50,7 @@
                         </li>
                     </ul>
                 </li>
-                <li *ngIf="(loginRole === 'ADMIN')" class="nav-item" data-toggle="tooltip" data-placement="right" title="门禁智能策略管理">
+                <li *ngIf="isAdmin" class="nav-item" data-toggle="tooltip" data-placement="right" title="门禁智能策略管理">
                     <a class="nav-link" routerLink="/policies">
                         <i class="fa fas fa-globe"></i>
                         <span class="nav-link-text">门禁智能策略管理</span>
