--- a/ui/src/app/messages/messages.component.css
+++ b/ui/src/app/messages/messages.component.css
@@ -1,8 +1,10 @@
 .app-msg-pane {
     position: fixed;
-    bottom: 0;
-    right: 0;
+    width: 200px;
+    bottom: 0;   
+    left: 50%;   
+    transform: translate(0, -50%);
     padding: 0;
     z-index: 1;
-    opacity:0.7;
+    opacity:0.8;
 }
