1. show secret for door 2. make incidents/cards api transactional 3. show dialog for all CUD operations.

--- a/ui/src/app/cards/cards/cards.component.html
+++ b/ui/src/app/cards/cards/cards.component.html
@@ -30,3 +30,5 @@
   </tbody>
 </table>
 <app-pagination [totalItems] = "totalItems" [pageSize]="pageable.size" (onPageLoad)="loadPage($event)"></app-pagination>
+
+<app-dialog #dialog [title]="'删除门禁卡'"></app-dialog>
