--- a/ui/src/app/incidents/incidents/incidents.component.html
+++ b/ui/src/app/incidents/incidents/incidents.component.html
@@ -30,3 +30,4 @@
   </tbody>
 </table>
 <app-pagination [totalItems] = "totalItems" [pageSize]="pageable.size" (onPageLoad)="loadPage($event)"></app-pagination>
+<app-dialog #dialog [title]="'删除事件'"></app-dialog>
