--- a/ui/src/app/users/users/users.component.html
+++ b/ui/src/app/users/users/users.component.html
@@ -26,3 +26,4 @@
   </tbody>
 </table>
 <app-pagination [totalItems] = "totalItems" [pageSize]="pageable.size" (onPageLoad)="loadPage($event)"></app-pagination>
+<app-dialog #dialog [title]="'删除用户'"></app-dialog>
