--- a/ui/src/app/workers/worker/worker.component.html
+++ b/ui/src/app/workers/worker/worker.component.html
@@ -50,3 +50,4 @@
       <button type="button" class=" btn btn-primary btn-lg submit-btn" routerLink="../">取消</button>
   </div>
 </form>
+<app-dialog #dialog [title]="isAdd?'添加劳工':'修改劳工'" [goBackOnSuccess]="true"></app-dialog>
