--- a/ui/src/app/cards/card/card.component.html
+++ b/ui/src/app/cards/card/card.component.html
@@ -27,3 +27,4 @@
     <button type="button" class=" btn btn-primary btn-lg submit-btn" routerLink="../">取消</button>
   </div>
 </form>
+<app-dialog #dialog [title]="isAdd?'添加门禁卡':'修改门禁卡'" [goBackOnSuccess]="true"></app-dialog>
