--- a/ui/src/app/messages/messages.component.css
+++ b/ui/src/app/messages/messages.component.css
@@ -2,8 +2,7 @@
     position: fixed;
     width: 200px;
     bottom: 0;   
-    left: 50%;   
-    transform: translate(0, -50%);
+    right: 0;
     padding: 0;
     z-index: 1;
     opacity:0.8;
