--- a/ui/src/app/policies/policy/policy.component.html
+++ b/ui/src/app/policies/policy/policy.component.html
@@ -36,4 +36,5 @@
         <button type="button" class=" btn btn-primary btn-lg submit-btn" routerLink="../">取消</button>
     </div>
   </form>
+  <app-dialog #dialog [title]="isAdd?'添加策略':'修改策略'" [goBackOnSuccess]="true"></app-dialog>
 
