--- a/ui/src/app/users/user/user.component.html
+++ b/ui/src/app/users/user/user.component.html
@@ -32,4 +32,5 @@
       <button type="button" class=" btn btn-primary btn-lg submit-btn" routerLink="../">取消</button>
   </div>
 </form>
+<app-dialog #dialog [title]="isAdd?'添加用户':'修改用户'" [goBackOnSuccess]="true"></app-dialog>
 
