--- a/ui/src/app/workers/workers/workers.component.html
+++ b/ui/src/app/workers/workers/workers.component.html
@@ -36,3 +36,4 @@
   </tbody>
 </table>
 <app-pagination [totalItems] = "totalItems" [pageSize]="pageable.size" (onPageLoad)="loadPage($event)"></app-pagination>
+<app-dialog #dialog [title]="'删除劳工'"></app-dialog>
